--- a/El Dingos/Base.lproj/Main.storyboard
+++ b/El Dingos/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C81h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -278,10 +278,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="800" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TI5-p5-KdV">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TI5-p5-KdV">
                                 <rect key="frame" x="0.0" y="0.0" width="800" height="1451"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rxG-dS-0aD">
+                                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rxG-dS-0aD">
                                         <rect key="frame" x="0.0" y="0.0" width="800" height="1950"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hunter" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7iV-b1-dEm">
@@ -310,7 +310,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="Czs-A5-rz5"/>
                                                 </constraints>
-                                                <mutableString key="text">After being banished to South Dakota the young man determined to make a name for himself. He hogged the mic at the local pub's karaoke nights enough times that he was offered a record deal at age 17. Signing with the rest of the dingos changed him as he was no longer limted to drinking apple juice at the beaten up old pub after work every day. He now enjoys only the finest fruit ciders at any restraunt within walking distance of his choosing, never leaving the house without a secondary jacket to warm the area around his neck.</mutableString>
+                                                <string key="text">After being banished to South Dakota the young man determined to make a name for himself. He hogged the mic at the local pub's karaoke nights enough times that he was offered a record deal at age 17. Signing with the rest of the dingos changed him as he was no longer limted to drinking apple juice at the beaten up old pub after work every day. He now enjoys only the finest fruit ciders at any restraunt within walking distance of his choosing, never leaving the house without a secondary jacket to warm the area around his neck.</string>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
