--- a/El Dingos/Base.lproj/Main.storyboard
+++ b/El Dingos/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C81h" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="49e-Tb-3d3">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -242,6 +242,87 @@
                                             </variation>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="1" id="Wbe-mn-rjR">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" tableViewCell="Wbe-mn-rjR" id="FK4-5W-ykT">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="2.7755575615628914e-17" translatesAutoresizingMaskIntoConstraints="NO" id="oT1-mQ-Eco">
+                                                    <rect key="frame" x="196" y="20" width="396" height="2"/>
+                                                </progressView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kreemb" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zaP-DO-9XY">
+                                                    <rect key="frame" x="8" y="11" width="128" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="oT1-mQ-Eco" firstAttribute="leading" secondItem="FK4-5W-ykT" secondAttribute="leadingMargin" constant="188" id="MJa-hu-cA7"/>
+                                                <constraint firstAttribute="centerY" secondItem="oT1-mQ-Eco" secondAttribute="centerY" constant="1" id="QEO-9A-QWu"/>
+                                                <constraint firstItem="oT1-mQ-Eco" firstAttribute="trailing" secondItem="FK4-5W-ykT" secondAttribute="trailingMargin" id="bwO-B5-u56"/>
+                                            </constraints>
+                                            <variation key="heightClass=compact-widthClass=compact">
+                                                <mask key="subviews">
+                                                    <include reference="oT1-mQ-Eco"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="1" id="gVh-hI-Go7">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" tableViewCell="gVh-hI-Go7" id="8DT-6Z-OEF">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="2.7755575615628914e-17" translatesAutoresizingMaskIntoConstraints="NO" id="tiQ-X3-pVV">
+                                                    <rect key="frame" x="196" y="20" width="396" height="2"/>
+                                                </progressView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="James Purejoy" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m2i-3q-DH9">
+                                                    <rect key="frame" x="8" y="11" width="128" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="tiQ-X3-pVV" firstAttribute="leading" secondItem="8DT-6Z-OEF" secondAttribute="leadingMargin" constant="188" id="6w7-Cu-9Zp"/>
+                                                <constraint firstItem="tiQ-X3-pVV" firstAttribute="trailing" secondItem="8DT-6Z-OEF" secondAttribute="trailingMargin" id="Is5-5c-f6x"/>
+                                                <constraint firstAttribute="centerY" secondItem="tiQ-X3-pVV" secondAttribute="centerY" constant="1" id="f1w-uT-GDR"/>
+                                            </constraints>
+                                            <variation key="heightClass=compact-widthClass=compact">
+                                                <mask key="subviews">
+                                                    <include reference="tiQ-X3-pVV"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="1" id="sKO-kI-Bhd">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" tableViewCell="sKO-kI-Bhd" id="F8m-gi-t9l">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="2.7755575615628914e-17" translatesAutoresizingMaskIntoConstraints="NO" id="M5Z-g1-Lrc">
+                                                    <rect key="frame" x="196" y="20" width="396" height="2"/>
+                                                </progressView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Dingo Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ONz-rZ-pmh">
+                                                    <rect key="frame" x="8" y="11" width="128" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="M5Z-g1-Lrc" firstAttribute="leading" secondItem="F8m-gi-t9l" secondAttribute="leadingMargin" constant="188" id="0fm-58-GIy"/>
+                                                <constraint firstItem="M5Z-g1-Lrc" firstAttribute="trailing" secondItem="F8m-gi-t9l" secondAttribute="trailingMargin" id="bZ3-vC-3Yq"/>
+                                                <constraint firstAttribute="centerY" secondItem="M5Z-g1-Lrc" secondAttribute="centerY" constant="1" id="kUJ-V4-ZSK"/>
+                                            </constraints>
+                                            <variation key="heightClass=compact-widthClass=compact">
+                                                <mask key="subviews">
+                                                    <include reference="M5Z-g1-Lrc"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -265,12 +346,47 @@
                         <outlet property="p2" destination="2zX-gk-Erm" id="m3R-ec-dN8"/>
                         <outlet property="p3" destination="kuF-BV-Y9g" id="CAM-aW-bTp"/>
                         <outlet property="p4" destination="tmq-c9-L7o" id="bEQ-MS-Jc2"/>
+                        <outlet property="p5" destination="oT1-mQ-Eco" id="ZFt-J0-6eF"/>
+                        <outlet property="p6" destination="tiQ-X3-pVV" id="TJl-g5-bgs"/>
+                        <outlet property="p7" destination="M5Z-g1-Lrc" id="4Z8-qS-ppp"/>
                         <outlet property="tableView" destination="R9A-v5-hcT" id="OGL-ZY-mZt"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="93q-Fj-1Lp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3908" y="-424"/>
+        </scene>
+        <!--Video-->
+        <scene sceneID="ATf-WY-Ah3">
+            <objects>
+                <viewController id="rth-KZ-got" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PIc-19-Snd"/>
+                        <viewControllerLayoutGuide type="bottom" id="kq8-aZ-lUx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0CO-Kf-xIk">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ahf-6U-aWu">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ahf-6U-aWu" firstAttribute="leading" secondItem="0CO-Kf-xIk" secondAttribute="leadingMargin" constant="-16" id="I4m-v0-tud"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="ahf-6U-aWu" secondAttribute="trailing" constant="-16" id="aHc-ol-Gza"/>
+                            <constraint firstItem="kq8-aZ-lUx" firstAttribute="top" secondItem="ahf-6U-aWu" secondAttribute="bottom" id="fkU-GZ-lls"/>
+                            <constraint firstItem="ahf-6U-aWu" firstAttribute="top" secondItem="0CO-Kf-xIk" secondAttribute="topMargin" id="urk-nN-A8x"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Video" image="film" id="XwJ-6V-ztf"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xqd-Zx-v2d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3533" y="60"/>
         </scene>
         <!--Bios-->
         <scene sceneID="DrF-Ia-SvN">
@@ -308,7 +424,7 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="Czs-A5-rz5"/>
                                                 </constraints>
-                                                <mutableString key="text">After being banished to South Dakota the young man determined to make a name for himself. He hogged the mic at the local pub's karaoke nights enough times that he was offered a record deal at age 17. Signing with the rest of the dingos changed him as he was no longer limted to drinking apple juice at the beaten up old pub after work every day. He now enjoys only the finest fruit ciders at any restaurant within walking distance of his choosing, never leaving the house without a secondary jacket to warm the area around his neck.</mutableString>
+                                                <string key="text">After being banished to South Dakota the young man determined to make a name for himself. He hogged the mic at the local pub's karaoke nights enough times that he was offered a record deal at age 17. Signing with the rest of the dingos changed him as he was no longer limted to drinking apple juice at the beaten up old pub after work every day. He now enjoys only the finest fruit ciders at any restaurant within walking distance of his choosing, never leaving the house without a secondary jacket to warm the area around his neck.</string>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                             </textView>
@@ -466,6 +582,7 @@
                         <segue destination="9pv-A4-QxB" kind="relationship" relationship="viewControllers" id="u7Y-xg-7CH"/>
                         <segue destination="C9P-dL-qw8" kind="relationship" relationship="viewControllers" id="gOV-Uu-Kbm"/>
                         <segue destination="mO1-by-8Rh" kind="relationship" relationship="viewControllers" id="Wwh-n9-VFt"/>
+                        <segue destination="rth-KZ-got" kind="relationship" relationship="viewControllers" id="XSn-Am-Y3z"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
@@ -475,6 +592,7 @@
     </scenes>
     <resources>
         <image name="cbio" width="1198" height="1198"/>
+        <image name="film" width="30" height="30"/>
         <image name="gbio" width="430" height="430"/>
         <image name="hbio" width="173" height="173"/>
         <image name="house" width="30" height="30"/>
